fix: greeting section mobile version; code refactoring

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -74,5 +74,5 @@ li {
 }
 
 .section {
-  height: max(100vh, 900px);
+  height: calc(100dvh - 66px);
 }
